# creatureshin

./: CMakeLists.txt  SPEC.md
src/: CMakeLists.txt  main.cpp
src/annshin/: config.hpp  math.hpp
src/annshin/body/: body.cpp  body.hpp  drive.hpp  motor.hpp  sensor.hpp  stimulus.hpp
src/annshin/brain/: network.cpp  network.hpp  spatial_grid.hpp
src/annshin/loop/: simulation.cpp  simulation.hpp
src/annshin/render/: frame.hpp  raylib_renderer.cpp  raylib_renderer.hpp  renderer.hpp  snapshot.cpp  snapshot.hpp
src/annshin/world/: entity.hpp  geom.hpp  movement.hpp  sense.hpp  spawner.hpp  world.cpp  world.hpp
